# KURAI

./: .env.example  .gitignore  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  app.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  db.rs  hotkeys.rs  lib.rs  main.rs  tray.rs
src-tauri/src/animix/: auth.rs  cache.rs  catalog.rs  client.rs  mod.rs  progress.rs  series.rs  social.rs  types.rs  video.rs
src-tauri/src/marathon/: config.rs  engine.rs  mod.rs  navigator.rs  queue.rs
src-tauri/src/player/: state.rs
src/components/: anime-card.tsx  anime-grid.tsx  category-row.tsx  episode-list.tsx  filter-panel.tsx  marathon-config.tsx  marathon-dialog.tsx  marathon-queue.tsx  marathon-status.tsx  next-episode-overlay.tsx  player-controls.tsx  player-overlay.tsx  quality-picker.tsx  search-bar.tsx  skeleton.tsx  skip-overlay.tsx  toast.tsx
src/components/layout/: app-shell.tsx  sidebar.tsx  titlebar.tsx
src/hooks/: use-animix.ts  use-keyboard.ts  use-marathon.ts  use-player.ts
src/lib/: constants.ts  i18n.ts  shikimori.ts  tauri.ts  thumb-cache.ts  types.ts  utils.ts
src/pages/: anime.tsx  catalog.tsx  collections.tsx  history.tsx  home.tsx  login.tsx  marathon.tsx  settings.tsx
src/stores/: auth.ts  catalog.ts  marathon.ts  player.ts  settings.ts
